# raycpp

./: .gitignore  CMakeLists.txt  Makefile
assets/: cornell_area_light_minimal.txt  cornell_dragon.txt  cornell_empty.txt  cornell_point_light.txt  cornell_prism.txt  cornell_teapot.txt  env_1.txt  final_2.txt  final_3.txt  final_4.txt  final_5.txt
include/: optionparser.h
samples/: cornell_area_light.txt  cornell_area_light_small.txt  cornell_cow.txt  cornell_cylinder.txt  cornell_dragon.txt  cornell_fresnel_point_light.txt  cornell_mesh_sphere.txt  cornell_mesh_test.txt  cornell_point_light.txt  cornell_texture_1.txt  final_1.txt  hw3c_cornell.txt  kdtree_benchmark.txt  volume_test.txt
src/: AABB.cpp  AABB.h  AreaLight.cpp  AreaLight.h  BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Color.cpp  Color.h  Config.cpp  Config.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  EasyBMP.cpp  EnvironmentMap.cpp  EnvironmentMap.h  Face.cpp  Face.h  GLGeometry.cpp  GLGeometry.h  GLSL.h  GLUtils.cpp  GLUtils.h  GLWorldState.cpp  GLWorldState.h  Geometry.cpp  Geometry.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  Image.cpp  Image.h  Intersection.cpp  Intersection.h  KDTree.cpp  KDTree.h  (+42 more)
src/test/: test_loader.cpp
